deployments/branches/kubernetes/deployment.yaml
---
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  rules:
    - host: phpmyadmin.#ENVIRONMENT#.visial.test.thecodingmachine.com
      http:
        paths:
          - path: /
            backend:
              serviceName: phpmyadmin
              servicePort: 80
    - host: #ENVIRONMENT#.visial.test.thecodingmachine.com
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 80
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "mysql"
  labels:
    app: "mysql"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "mysql"
  template:
    metadata:
      labels:
        app: "mysql"
    spec:
      containers:
        - name: "mysql"
          image: "mysql:5.7"
          imagePullPolicy: Always
          args:
            - --ignore-db-dir=lost+found
            - --max_allowed_packet=512M
---
apiVersion: v1
kind: Service
metadata:
  name: "mysql"
spec:
  selector:
    app: "mysql"
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "phpmyadmin"
  labels:
    app: "phpmyadmin"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "phpmyadmin"
  template:
    metadata:
      labels:
        app: "phpmyadmin"
    spec:
      containers:
        - name: "phpmyadmin"
          image: "phpmyadmin/phpmyadmin:4.8"
---
apiVersion: v1
kind: Service
metadata:
  name: "phpmyadmin"
spec:
  selector:
    app: "phpmyadmin"
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "web"
  labels:
    app: "web"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "web"
  template:
    metadata:
      labels:
        app: "web"
    spec:
      containers:
        - name: "web"
          image: "git.thecodingmachine.com:444/tcm-projects/visial-web/web:#ENVIRONMENT#"
          imagePullPolicy: Always
      imagePullSecrets:
        - name: "tcmregistry"
---
apiVersion: v1
kind: Service
metadata:
  name: "web"
spec:
  selector:
    app: "web"
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
